[gd_scene load_steps=4 format=3 uid="uid://y5bs14ose7xg"]

[ext_resource type="Script" path="res://ScenesANDScripts/ForLevels/GameObjects/Spikes/Spikes.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ci10ymunoffpv" path="res://AllTextures/ForLevels/GameObjects/Spikes/Spikes.png" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2l5gt"]
size = Vector2(296, 48)

[node name="Spikes" type="Node2D"]
script = ExtResource("1")

[node name="Sprite" type="Node2D" parent="."]

[node name="Spike01" type="Sprite2D" parent="Sprite"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2")

[node name="Spike02" type="Sprite2D" parent="Sprite"]
position = Vector2(100, 0)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2")

[node name="Spike03" type="Sprite2D" parent="Sprite"]
position = Vector2(200, 0)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2")

[node name="AreaDamage" type="Area2D" parent="."]

[node name="CollisionDamage" type="CollisionShape2D" parent="AreaDamage"]
position = Vector2(100, 0)
shape = SubResource("RectangleShape2D_2l5gt")

[node name="VisibleOnScreenEnabler" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(100, 0.5)
scale = Vector2(14.8, 2.45)

[connection signal="body_entered" from="AreaDamage" to="." method="_on_area_damage_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler" to="." method="_on_visible_on_screen_enabler_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler" to="." method="_on_visible_on_screen_enabler_screen_exited"]
